# insightguard

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.services.yml  docker-compose.yml
deploy/nginx/: Dockerfile  nginx.conf  site.conf
insightguard/: __init__.py  __main__.py  conftest.py  settings.py
insightguard/db/: base.py  utils.py
insightguard/db/dao/: key_dao.py  user_dao.py
insightguard/db/migrations/: env.py
insightguard/db/migrations/versions/: 2023-02-16-19-14_4e3f6b2aec5f.py  2023-02-17-20-49_3cd1d07261ce.py
insightguard/db/models/: __init__.py  key_model.py  user_model.py
insightguard/ratelimiter/: limiter.py
insightguard/services/: __init__.py
insightguard/services/insightguard/: __init__.py  lifetime.py  model.py  models.py
insightguard/services/insightguard/models/: phishing.h5
insightguard/services/redis/: dependency.py  lifetime.py
insightguard/static/docs/: redoc.standalone.js  swagger-ui-bundle.js
insightguard/tests/: __init__.py  test_key.py  test_redis.py  test_user.py
insightguard/web/: __init__.py  application.py  dependencies.py  lifetime.py  middlewares.py
insightguard/web/api/: __init__.py  router.py  schema.py
insightguard/web/api/bullying/: __init__.py  schema.py  views.py
insightguard/web/api/key/: __init__.py  schema.py  views.py
insightguard/web/api/model/: __init__.py  schema.py  views.py
insightguard/web/api/monitoring/: __init__.py
insightguard/web/api/password/: __init__.py  schema.py  views.py
insightguard/web/api/phishing/: __init__.py  schema.py  views.py
web/insightguard/: README.md  next.config.js  package.json  tsconfig.json
web/insightguard/components/: modal.tsx  navbar.tsx  profile.tsx  shieldmodel.tsx
web/insightguard/hooks/: useAuth.tsx  useOnClickOutside.tsx
web/insightguard/pages/: _app.tsx  _document.tsx  about.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
web/insightguard/types/: Key.ts  User.ts
(+5 files in other folders)
